# shuttersense

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_AUDIT.md  config_manager.py  photo_pairing.py  photo_stats.py  pipeline_validation.py  pytest.ini  requirements.txt  setup_master_key.py  version.py  web_server.py
.claude/: settings.json
agent/: README.md  pyproject.toml
agent/cli/: __init__.py  capabilities.py  collection.py  config.py  connectors.py  debug.py  main.py  register.py  run.py  self_test.py  start.py  sync_results.py  test.py  update.py
agent/packaging/: build_all.sh  build_linux.sh  build_macos.sh  build_windows.sh  create_release.sh  generate_migration.sh
agent/packaging/templates/: release_migration.py.template
agent/src/: __init__.py  api_client.py  attestation.py  capabilities.py  chunked_upload.py  config.py  config_loader.py  config_resolver.py  credential_store.py  input_state.py  job_executor.py  main.py  metrics.py  polling_loop.py  progress_reporter.py  result_signer.py  version_cache.py
agent/src/analysis/: __init__.py  inventory_parser.py  photo_pairing_analyzer.py  photostats_analyzer.py  pipeline_analyzer.py  pipeline_config_builder.py  pipeline_tool_config.py  report_generators.py
agent/src/cache/: __init__.py  collection_cache.py  result_store.py  team_config_cache.py  test_cache.py
agent/src/remote/: __init__.py  base.py  gcs_adapter.py  local_adapter.py  s3_adapter.py  smb_adapter.py
agent/src/tools/: __init__.py  inventory_import_tool.py
agent/tests/: __init__.py  conftest.py
agent/tests/integration/: __init__.py  test_credential_config.py  test_inventory_import_tool.py  test_job_execution.py  test_offline_sync_flow.py  test_registration.py  test_test_create_flow.py
agent/tests/unit/: __init__.py  test_api_client.py  test_api_client_discover.py  test_attestation.py  test_camera_discovery.py  test_cancellation.py  test_chunked_upload.py  test_cli_capabilities.py  test_cli_connectors.py  test_cli_register.py  test_collection_cache.py  test_collection_command.py  test_config.py  test_config_loader.py  test_credential_store.py  test_input_state.py  test_inventory_import_phase_b.py  test_inventory_import_phase_c.py  test_inventory_parser.py  test_job_executor.py  test_local_adapter.py  test_local_filesystem.py  test_metrics.py  test_photo_pairing_analyzer.py  test_photo_pairing_pipeline.py  test_photostats_analyzer.py  test_photostats_pipeline.py  test_pipeline_analyzer.py  test_pipeline_analyzer_paths.py  test_pipeline_resolution.py  test_pipeline_tool_config.py  test_polling_loop.py  test_progress_reporter.py  test_result_signer.py  test_result_store.py  test_run_command.py  test_self_test.py  test_sync_command.py  test_test_cache.py  test_test_command.py  (+3 more)
backend/: .coveragerc  .env.example  README.md  __init__.py  alembic.ini  requirements.txt
config/: README.md  template-config.yaml
docs/: agent-build.md  agent-installation.md  ai-integration-roadmap.md  api-documentation-deployment.md  architecture.md  authentication.md  configuration.md  dashboard.md  deployment-hostinger-kvm2.md  deployment.md  domain-model.md  installation.md  notifications.md  photo-pairing.md  photostats.md  pipeline-validation.md  security-audit.md  (+4 more)
(+1130 files in other folders)
